src_saleforce_packages/scratchorgpool/force-app/main/default/objects/ScratchOrgInfo/fields/pooltag__c.field-meta.xml
<CustomField>
    <fullName>pooltag__c</fullName>
    <label>pooltag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>