src_saleforce_packages/scratchorgpool/force-app/main/default/objects/ScratchOrgInfo/fields/SfdxAuthUrl__c.field-meta.xml
<CustomField>
    <fullName>SfdxAuthUrl__c</fullName>
    <label>Sfdx Auth Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>